cloudstate-chat/deploy/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: "2020-02-22T16:08:07Z"
  generation: 3
  labels:
    app.kubernetes.io/component: user-function
    app.kubernetes.io/managed-by: cloudstate-operator
    app.kubernetes.io/name: chat-routes
  name: chat-routes
  namespace: corey-test
  ownerReferences:
  - apiVersion: cloudstate.io/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Route
    name: chat-routes
    uid: 83899e26-558d-11ea-ba83-4201ac100108
  resourceVersion: "63543842"
  selfLink: /apis/networking.istio.io/v1alpha3/namespaces/corey-test/virtualservices/chat-routes
  uid: 838b1f7d-558d-11ea-ba83-4201ac100108
spec:
  gateways:
  - default
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /cloudstate.samples.chat.friends.Friends/
    name: friends-routes
    route:
    - destination:
        host: friends.corey-test.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /cloudstate.samples.chat.presence.Presence/
    name: presence-routes
    route:
    - destination:
        host: presence.corey-test.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /
    name: chat-routes
    route:
      timeout: 10s
    - destination:
        host: presence.corey-test.svc.cluster.local
        port:
          number: 80
